syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.mgargas.currencyexchange";
option java_outer_classname = "CurrencyExchange";
option objc_class_prefix = "RTG";
service CurrencyExchange {
    rpc getForeignCurrenciesRates (CurrencyRequest) returns (stream CurrencyReply) {}
}

enum Currency {
    PLN = 0;
    GBP = 1;
    USD = 2;
    CHF = 3;
    EUR = 4;
}

message CurrencyRequest {
    Currency origin_currency = 1;
    repeated Currency foreign_currency = 2 [packed=true];
}

message CurrencyReply {
    Currency origin_currency = 1;
    double exchange_rate = 2;
}